--- a/escritos-volumen-2/updated/02-capitulo-2.adoc
+++ b/escritos-volumen-2/updated/02-capitulo-2.adoc
@@ -628,7 +628,7 @@ lectura de las Escrituras, observación de ordenanzas y deberes, etc.
 en el que la fuerza del cautiverio es en alguna medida rota,
 el corazón es atraído a ocuparse de las guías de vida y
 a seguir en pos del Señor a través de las pruebas,
-a través de las entrenamientos,
+a través de los entrenamientos,
 a través de los diversos ejercicios con los que el Señor tiene a bien ejercitarlo.
 
 Aquí la misericordia y la bondad del Señor son experimentadas,
