--- a/escritos-volumen-2/updated/03-capitulo-3.adoc
+++ b/escritos-volumen-2/updated/03-capitulo-3.adoc
@@ -317,7 +317,7 @@ Los frutos están en concordancia con la raíz de vida en nosotros,
 y así son reconocidos por todo que nos miran con el verdadero ojo,
 el ojo que Dios da y abre.
 
-Ahora, el mismo que ha trabajo internamente en nosotros,
+Ahora, el mismo que ha trabajado internamente en nosotros,
 también ha requerido algunas conductas y expresiones externas de nosotros.
 Las cuales son tontas y débiles para el ojo de la sabiduría del hombre,
 pero han sido escogidas por Dios para esconder la gloria de esta vida,
