updates to task: I.P. Vol.2

--- a/escritos-volumen-2/updated/03-capitulo-3.adoc
+++ b/escritos-volumen-2/updated/03-capitulo-3.adoc
@@ -498,13 +498,13 @@ a lo largo de la apostasía y de la noche de oscuridad
 que ha venido sobre el estado cristiano.
 Porque no ha habido nadie capaz de volver al pueblo
 hacia esa luz a la que los apóstoles dirigieron.
-Nadie ha podido decirles a los hombre dónde brilla la luz,
+Nadie ha podido decirles a los hombres dónde brilla la luz,
 ni dónde deben expectarla ni esperarla.
 Nadie ha sido capaz de dirigir a los hombres a la Semilla del reino interior,
 a la Palabra de fe, la Palabra del reino que está cerca, en el corazón y la boca.
-Mucho menos capaces aun,
-de instruir a los hombre en cómo podrían conocerla
-y distinguirla de todas las otras semilla,
+Mucho menos capaces aún,
+de instruir a los hombres en cómo podrían conocerla
+y distinguirla de todas las otras semillas,
 y cómo distinguir la voz del Pastor de todas las otras voces.
 Sucedió, entonces, que aunque a veces Dios visitaba y abría los corazones de los hombres,
 calentándolos un poquito mediante el aliento que salía de Él mismo,
