--- a/escritos-volumen-2/updated/04-capitulo-4.adoc
+++ b/escritos-volumen-2/updated/04-capitulo-4.adoc
@@ -136,7 +136,7 @@ y es defendida y nutrida con lo que es puro, vivo y está lleno de savia y virtu
 Así se fortalece en el Señor y en el poder de Su fuerza,
 contra el poder y la fuerza de las tinieblas.
 
-Todos los hombre pueden experimentar esto (al principio
+Todos los hombres pueden experimentar esto (al principio
 en cierta medida y en grado pequeño,
 y después más y más),
 conforme llegan a palpar lo que es de Dios y a fortalecerse en el poder de Su fuerza,
