--- a/escritos-volumen-1/updated/05-capitulo-4.adoc
+++ b/escritos-volumen-1/updated/05-capitulo-4.adoc
@@ -178,6 +178,9 @@ a qué no lo puede conformar.
 Para que así la verdadera diferencia pueda ser establecida en su mente y no se
 ponga un fundamento para tan grande error en un asunto de tan grande importancia.
 
+[.numbered-group]
+====
+
 [.numbered]
 1+++.+++ Un hombre puede creer la historia de las Escrituras, sí,
 y todas las doctrinas de ellas hasta donde pueda abarcarlas con su entendimiento,
@@ -255,6 +258,8 @@ Todos estos frutos no son más que los frutos de la primera naturaleza,
 la cual continúa viva por debajo de todo.
 Nada de lo que se encuentra en esta falsa fe puede matar la semilla de la que crece,
 más bien la alimenta y la engorda para el sacrificio.
+
+====
 
 Hasta aquí puede llegar la fe del hombre,
 pero entonces hay algo que queda excluido desde el mismo principio.
@@ -822,6 +827,9 @@ que está obrando actualmente en el corazón.]
 (en el silencio de la parte que está adelante y corriendo
 al frente) hasta que la llave sea dada!
 
+[.numbered-group]
+====
+
 [.numbered]
 2+++.+++ No corran en su propio entendimiento, ni en su propia voluntad,
 buscando el significado de las Escrituras,
@@ -870,6 +878,8 @@ aprenderán a permanecer en la vida y a mantener todo lo que les
 es dado ahí. No tengan nada que puedan llamar propio nunca más;
 perezcan para sí mimos y sean hallados en Él. Conozcan la tierra de los vivos,
 en la que todas las cosas de la vida viven y no pueden vivir en ningún otro lugar.
+
+====
 
 Ahora bien, en todo esto hay estabilidad y seguridad.
 Yo empiezo a aprender algo de Dios desde la primera
