--- a/escritos-volumen-1/updated/12-capitulo-11.adoc
+++ b/escritos-volumen-1/updated/12-capitulo-11.adoc
@@ -12,6 +12,9 @@ con respecto a esta porción de las Escrituras,
 con respiraciones del espíritu y tierno afecto hacia aquellos "`que están trabajados
 y cargados;`" meditaciones que me siento impelido a comunicar.
 
+[.numbered-group]
+====
+
 [.numbered]
 1+++.+++ El verdadero descanso del alma está en el evangelio (el cual es "`poder
 de Dios para salvación`"). Aquí está la verdad con respecto al reino,
@@ -93,6 +96,8 @@ el yugo y la libertad son una y la misma cosa.
 El poder de Dios, la vida eterna, la luz pura,
 la naturaleza divina son un yugo para la naturaleza transgresora, pero es holgura,
 placer, descanso, paz y gozo para lo que es nacido de Dios.
+
+====
 
 Ahora bien, tengo que decirle al alma que ha sentido deseos por el Señor anteriormente,
 y en la que todavía hay verdaderos deseos en pos de Su presencia
@@ -199,6 +204,9 @@ del que el evangelio habla ampliamente al verdadero creyente?
 Respuesta: Usted que desea disfrutar a su Amado,
 experimentar el reposo de Su evangelio y caminar en la senda que lo conduce a Él,
 espere aprender del Espíritu lo siguiente:
+
+[.numbered-group]
+====
 
 [.numbered]
 1+++.+++ Conozca qué es lo que puede caminar en la senda de vida,
@@ -320,6 +328,8 @@ Sin embargo, es fácil elogiar y practicar la semejanza de esas cosas sin el Esp
 entonces lo que era de Dios en el corazón pronto se marchita,
 una edificación contraria es levantada y el estado del corazón cambiado.
 ¡Espere en el Señor que Él le dé el entendimiento de estas cosas!
+
+====
 
 [.discourse-part]
 Pregunta: ¿Cómo puedo conocer y aferrarme al engendrado de Dios,
