--- a/escritos-volumen-1/updated/13-capitulo-12.adoc
+++ b/escritos-volumen-1/updated/13-capitulo-12.adoc
@@ -917,6 +917,9 @@ según le plazca al alfarero favorecer o tomar ocasión contra ella.
 
 === El Triple Estado del Hombre
 
+[.numbered-group]
+====
+
 [.numbered]
 _Primero,_ hay un estado gentil o estado de la naturaleza.
 
@@ -933,6 +936,8 @@ _Tercero,_ hay un estado del evangelio o estado de la fe,
 donde la Semilla es levantada y vive.
 Sí, la Semilla que hace la voluntad y recibe la promesa es conocida,
 disfrutada y sentida brotando en el interior.
+
+====
 
 En todos estos estados, la ley, la luz, la vida, la sabiduría,
 el poder son uno y el mismo, pero las administraciones son diferentes.
@@ -1181,6 +1186,9 @@ las cuales pueden servirles en su condición actual.
 Son cuatro proposiciones relacionadas con el correcto
 conocimiento de las cosas de Dios y son las siguientes:
 
+[.numbered-group]
+====
+
 [.numbered]
 _Primera,_ el conocimiento de las cosas de Dios proviene del Espíritu.
 Así como las Escrituras mismas salieron del Espíritu,
@@ -1249,6 +1257,8 @@ También es fácil retener conocimiento y hacer uso
 de él en la voluntad y sabiduría de la mente natural,
 pues ambas son naturales, pero es difícil negar la razón,
 los pensamientos e imaginaciones y vigilar al Espíritu.
+
+====
 
 ¡Oh, profesantes, esperen la aparición viva de Dios!
 Esperen la frescura de Su Espíritu en sus espíritus,
