--- a/escritos-volumen-2/updated/01-capitulo-1.adoc
+++ b/escritos-volumen-2/updated/01-capitulo-1.adoc
@@ -256,6 +256,9 @@ que ellos enseñaban a Cristo sólo como una vida interior
 o una luz que obraba en el corazón,
 pero negaban o rechazaban la obra externa de Cristo consumada en Su cuerpo natural.)]
 
+[.numbered-group]
+====
+
 [.numbered]
 1+++.+++ Nosotros efectivamente reconocemos que la Palabra de Dios (el
 unigénito del Padre) tomó un cuerpo de carne de la virgen María;
@@ -284,6 +287,8 @@ Porque el hombre fue excluido de esta virtud viva y poder por causa de la caída
 pero a través del verdadero conocimiento de la muerte de Cristo,
 el camino es abierto de nuevo y el hombre es llevado a él para ser bautizado, lavado,
 limpiado, santificado, hecho apto y llenado de vida.
+
+====
 
 De esto podríamos hablar con más claridad y sencillez
 si los hombres pudieran oír nuestras palabras.
@@ -605,6 +610,9 @@ profesándolo sólo en palabras, pero negándolo en realidad y sustancia.
 Para aclarar este asunto,
 nosotros hemos solemnemente profesado ante los ojos del Señor Dios, estas dos cosas:
 
+[.numbered-group]
+====
+
 [.numbered]
 __Primero,__
 que nosotros realmente reconocemos en nuestros corazones
@@ -617,6 +625,8 @@ tal como está expresado en la letra de las Escrituras.
 __Segundo,__ que no reconocemos a otro Cristo más que a ese,
 ni predicamos ninguna otra cosa como el Cristo,
 además de Aquel que apareció entonces y se manifestó en carne.
+
+====
 
 Entonces, debe ser investigado por los profesantes,
 cuál es la razón de que aún permanezcan sus prejuicios acerca de nosotros.
