--- a/escritos-volumen-2/updated/02-capitulo-2.adoc
+++ b/escritos-volumen-2/updated/02-capitulo-2.adoc
@@ -615,6 +615,9 @@ el alma experimenta varios estados en sus viajes
 verdaderos y discernibles hacia la tierra santa.
 Como por ejemplo:
 
+[.numbered-group]
+====
+
 [.numbered]
 1+++.+++ Hay un estado de oscuridad y esclavitud egipcia,
 en el que el poder de la muerte reina y gobierna en el corazón,
@@ -653,6 +656,8 @@ Hay un reino eterno, donde reinan Dios y Cristo,
 en el que Dios pisotea a Satanás bajo los pies del
 alma y la hace rey y sacerdote en el Hijo de Su amor,
 y donde el alma siente que es una con el Amado y aceptada en Él.
+
+====
 
 Amigos, mi ferviente deseo es que ustedes conozcan este reino, viajen fielmente hacia él,
 sientan y entren en el reinado de Cristo en él,
