--- a/escritos-volumen-2/updated/08-capitulo-8.adoc
+++ b/escritos-volumen-2/updated/08-capitulo-8.adoc
@@ -56,6 +56,9 @@ reciben poder de Él y permanecen y ministran en dicho poder.
 Por tanto, tres cosas se requieren de un verdadero ministro,
 sin las cuales no puede ser recto o ejecutar su oficio correctamente:
 
+[.numbered-group]
+====
+
 [.numbered]
 1+++.+++ Deben ser llamados por Dios.
 El ministro bajo la ley estaba autorizado por su llamado y nombramiento de Dios.
@@ -89,6 +92,8 @@ ni velar o vigilar sobre el rebaño en su propia sabiduría, en su propio espír
 en su propia voluntad, sino sólo en la unción, en la luz y guía del Señor. Esta reunión,
 este edificio, esta obra del Señor comienza sin carne, separada del hombre,
 y la carne debe mantenerse fuera de todo lo que se lleva a cabo.
+
+====
 
 En efecto, si los ministros del evangelio no están en el Espíritu, ni en la vida,
 ni en el poder, ¿cómo pueden ministrar a la naturaleza,
@@ -302,6 +307,9 @@ Respuesta: Para ustedes,
 que se hacen esta pregunta en la rectitud y sencillez de sus corazones,
 tengo algo que decirles:
 
+[.numbered-group]
+====
+
 [.numbered]
 1+++.+++ Consideren cómo fueron tocados, cómo fueron alcanzados;
 examinen cuál oído fue abierto en ustedes,
@@ -405,6 +413,8 @@ consolarlos, revelarse más y conducirlos más lejos en el camino de vida,
 más cerca del poder y pureza de este.
 Pero si retroceden del lugar donde Él comenzó a obrar,
 el alma del Señor no se agradará en aparecer más en ustedes, u obrar más en ustedes.
+
+====
 
 Les diré algo: Si ustedes no dejan entrar las tentaciones del enemigo, y bajo las nubes,
 bajo las tormentas, bajo las tempestades, bajo los confusos razonamientos, temores,
@@ -624,6 +634,9 @@ donde se proclama el pacto gratuito, y sin embargo, hay algo que se requiere:
 Inclinad vuestro oído, y venid a mí; oíd, y vivirá vuestra alma;
 y haré con vosotros pacto eterno, las misericordias firmes a David.`"
 
+[.numbered-group]
+====
+
 [.numbered]
 2+++.+++ Se requiere arrepentimiento;
 se requiere volverse de la naturaleza y espíritu viejos e inmundos y no tocarlos más,
@@ -649,6 +662,8 @@ Pues tal como el primer pacto requería la obediencia propia al mismo,
 así el segundo pacto requiere la obediencia propia a este.
 Y así como no había salvación o permanencia en el primer pacto sin la obediencia a este,
 tampoco hay en el segundo, sin la obediencia a dicho pacto.
+
+====
 
 Aquel que quiera disfrutar la paz, justicia, justificación, vida y poder de este pacto,
 debe vivir en el Espíritu, caminar en el Espíritu y cumplir la voluntad del Espíritu.
@@ -921,6 +936,9 @@ de Dios y las del espíritu del enemigo en él,
 y así, (en la luz del Señor) saber cuando habla el Señor,
 y también cuando se esfuerza por hablar como el Señor el misterioso espíritu de engaño.
 
+[.numbered-group]
+====
+
 [.numbered]
 2+++.+++ __La falta de familiaridad con la verdad de Dios en el amor, vida y poder de esta.__
 Porque para el que conoce la verdad y ha recibido
@@ -945,6 +963,8 @@ algunos en una colina y otros en otra, diciendo:
 "`Levantaos y andad, porque no es este el lugar de reposo,
 pues está contaminado,`" no pueden oír. ¿Por qué? Porque ya han
 creído lo contrario y piensan que han encontrado su reposo.
+
+====
 
 === Algunas Preguntas con Respecto al Engaño y a los Engañadores
 
