--- a/escritos-volumen-2/updated/14-capitulo-14.adoc
+++ b/escritos-volumen-2/updated/14-capitulo-14.adoc
@@ -715,7 +715,7 @@ aunque tenga paciencia de él en el tiempo de su ignorancia.
 Sin embargo,
 si permanece en tales cosas después de la manifestación de la luz y su testimonio,
 el Señor no tendrá paciencia de él,
-sino que lo condenará y tratará con el como transgresor del pacto
+sino que lo condenará y tratará con él como transgresor del pacto
 en el que se experimenta la vida y la paz con Él.
 
 Por lo tanto, en todas las cosas que conciernen a Dios,
