--- a/escritos-volumen-2/updated/11-capitulo-11.adoc
+++ b/escritos-volumen-2/updated/11-capitulo-11.adoc
@@ -594,7 +594,7 @@ le ha placido cerrar en mí.`"
 Ciertamente esta es la base de la gran diferencia entre nosotros y los demás,
 con respecto a las cosas de Dios.
 Porque, aunque reconocemos las mismas cosas y hablamos de las mismas cosas, aun así,
-nosotros nos las reconocemos igual, ni hablamos de ellas igual.
+nosotros no las reconocemos igual, ni hablamos de ellas igual.
 ¿Por qué? Porque las vemos con diferentes ojos,
 y por eso tenemos un sentido diferente de ellas.
 Otros dicen que las cosas son verdaderas y las reconocen así,
