--- a/escritos-volumen-2/updated/15-capitulo-15.adoc
+++ b/escritos-volumen-2/updated/15-capitulo-15.adoc
@@ -2189,7 +2189,7 @@ al yo y a la justicia propia cuando la Semilla vive en el corazón?
 Mi religión (por la que yo ahora bendigo a mi Dios diariamente),
 empezó en esta Semilla,
 y cuando la sentí por primera vez y claramente supe que era el Señor, mi exclamación fue:
-"`¡Oh, esto es lo que he anhelado y por lo que esperado largo tiempo! ¡Oh,
+"`¡Oh, esto es lo que he anhelado y por lo que he esperado por un largo tiempo! ¡Oh,
 une mi alma a Ti,
 en esta Semilla para siempre! ¡Este es el don de Tu Hijo que viene de Ti,
 la gracia de Tu Hijo, la verdad de Tu Hijo, la vida de Tu Hijo,
@@ -3176,7 +3176,7 @@ si has sido cambiado por esto y si has sido fiel
 al Señor en lo que te ha sido hecho manifiesto.
 No hay una forma segura de postergar cuando se trata de la verdad.
 El que pone su mano en el arado no debe mirar atrás a nada de este mundo,
-sino tomar la cruz y seguir a Cristo en sincera obediencia, aborreciendo al padre, madre,
+sino tomar la cruz y seguir a Cristo en sincera obediencia, aborreciendo a padre, madre,
 bienes, tierras, esposa; sí, todo por el bien de Él,
 o no es digno de Él. La buena mano del Señor está con Su
 pueblo y Él los bendice tanto interna como externamente.
@@ -3202,7 +3202,7 @@ Es fácil profesar y aparentar la verdad, pero es difícil entrar en ella.
 Es muy difícil para la mente terrenal separarse de eso que debe separarse,
 antes de que el alma llegue a poseerlo y disfrutarlo.
 Profesar la verdad sin la vida ni el poder, no es más que un lugar resbaladizo,
-desde el que los hombre fácilmente se deslizan.
+desde el que los hombres fácilmente se deslizan.
 En realidad, si los hombres no están en la vida ni en el poder,
 difícilmente pueden evitar eso que quiere manchar su profesión. El Señor,
 que escudriña el corazón,
@@ -3614,7 +3614,7 @@ Permaneciste como uno que se negó a ser consolado
 por algo que sólo tenía apariencia de religión,
 hasta que llegó a Su templo Aquel que es verdad y no mentira.
 Porque todas esas fachadas de religión te fueron manifestadas,
-para que te enfermeras y cansaras de todos ellos.
+para que te enfermaras y cansaras de todos ellos.
 
 He balbuceado este pequeño testimonio de tu vida oculta, mi querido y precioso,
 sobre la época de tu vida cuando nadie de la congregación
