--- a/escritos-volumen-2/updated/15-capitulo-15.adoc
+++ b/escritos-volumen-2/updated/15-capitulo-15.adoc
@@ -2189,7 +2189,7 @@ al yo y a la justicia propia cuando la Semilla vive en el corazón?
 Mi religión (por la que yo ahora bendigo a mi Dios diariamente),
 empezó en esta Semilla,
 y cuando la sentí por primera vez y claramente supe que era el Señor, mi exclamación fue:
-"`¡Oh, esto es lo que he anhelado y por lo que he esperado por un largo tiempo! ¡Oh,
+"`¡Oh, esto es lo que he anhelado y lo que he esperado por un largo tiempo! ¡Oh,
 une mi alma a Ti,
 en esta Semilla para siempre! ¡Este es el don de Tu Hijo que viene de Ti,
 la gracia de Tu Hijo, la verdad de Tu Hijo, la vida de Tu Hijo,
