--- a/escritos-volumen-2/updated/03-capitulo-3.adoc
+++ b/escritos-volumen-2/updated/03-capitulo-3.adoc
@@ -314,7 +314,7 @@ Yo no estoy solo en esto, ni soy el principal, sino que tengo muchos iguales.
 En realidad,
 hay muchos que me superan por mucho en la imagen celestial y divina de mi Padre.
 Los frutos están en concordancia con la raíz de vida en nosotros,
-y así son reconocidos por todo que nos miran con el verdadero ojo,
+y así son reconocidos por todos que nos miran con el verdadero ojo,
 el ojo que Dios da y abre.
 
 Ahora, el mismo que ha trabajado internamente en nosotros,
@@ -347,7 +347,7 @@ dando victoria sobre todos ellos.
 Pero ustedes creen con una fe que estima la victoria
 imposible mientras estemos en el mundo.
 Y así como nuestra raíz es diferente,
-así también todo lo que crece en nosotros difiere de lo crece de la de ustedes.
+así también todo lo que crece en nosotros difiere de lo que crece de la de ustedes.
 
 Para cerrar agregaré unas pocas palabras de Filipenses 3:3,
 "`Porque nosotros somos la circuncisión,
@@ -398,7 +398,7 @@ En Él está mi aceptación para con el Padre.
 Su brazo me ha recogido y me rodea día a día. Yo reposo bajo la sombra de Sus alas,
 de las que la virtud sanadora de Su salud salvadora cae sobre mi espíritu día a día. ¡Oh,
 no puedo expresarle a ningún hombre lo que Él es para mí! Pero,
-¡bendito sea el Señor porque lo siento cerca, su justicia cerca,
+¡bendito sea el Señor porque lo siento cerca, Su justicia cerca,
 Su salvación a diario revelada delante del ojo que Él ha abierto en mí,
 en esa consciencia verdadera y viva con la que Él me ha vivificado!
 
@@ -554,7 +554,7 @@ aunque hay grandes disputas acerca de nuestro testimonio en nuestros días
 (y los actuales profesantes se levantan contra nosotros,
 tal como los antiguos profesantes lo hicieron contra ellos), todavía,
 si algún hombre llega correctamente a distinguir en sí mismo entre
-lo que Dios engendra en el corazón y todos los otro nacimientos,
+lo que Dios engendra en el corazón y todos los otros nacimientos,
 pronto confesará que nuestro testimonio es de Dios y es
 dado en la autoridad y por la comisión de Su propio Espíritu.
 La verdadera sabiduría es justificada por los hijos que nacen de ella,
