more chap 3 typos

--- a/escritos-volumen-2/updated/03-capitulo-3.adoc
+++ b/escritos-volumen-2/updated/03-capitulo-3.adoc
@@ -42,7 +42,7 @@ perdona los pecados que fueron cometidos antes.
 Porque aunque el Señor me visita con vida,
 me vivifica por ella y opera un cambio en mi corazón y estado,
 aún sigue siendo Su misericordia aceptarme y pasar por alto (por amor de Su nombre),
-mi deudas y transgresiones anteriores contra Él. De hecho,
+mis deudas y transgresiones anteriores contra Él. De hecho,
 el nuevo pacto es en su totalidad, un pacto de gracia y misericordia.
 La dádiva de Cristo, la atracción de la mente hacia Él,
 la aceptación y justificación que están en Él, etc., son obras de gracia y misericordia.
