--- a/escritos-volumen-2/updated/02-capitulo-2.adoc
+++ b/escritos-volumen-2/updated/02-capitulo-2.adoc
@@ -989,7 +989,7 @@ Jesús haciéndolos libres de la ley del pecado y muerte.
 ¿No ha venido el más fuerte que el hombre fuerte,
 con Su ley y poder de una vida indestructible?
 ¿No manifestará Él Su dominio en el corazón sobre la ley del pecado y muerte?
-Sí, conforme la ley del vida es recibida y se le permite entrar, ella opera, conquista,
+Sí, conforme la ley de la vida es recibida y se le permite entrar, ella opera, conquista,
 somete y rebalsa la ley del pecado y muerte.
 
 Y si Dios, por el poder y aliento de Su Santo Espíritu, con Su ley viva y poderosa,
