--- a/escritos-volumen-2/updated/04-capitulo-4.adoc
+++ b/escritos-volumen-2/updated/04-capitulo-4.adoc
@@ -290,9 +290,9 @@ sus corazones y les ponga estas cosas de manifiesto.
 _En quinto lugar,_ consideren el peso de las siguientes dos escrituras,
 y no conciban otro significado para ustedes,
 ni quiten el significado e intención del Santo Espíritu de Dios en ellas.
-La primera es del apóstol Pablo en Efesios 5:13-14, "`Mas todas las cosas,
-cuando son puestas en evidencia por la luz, son hechas manifiestas;
-porque la luz es lo que manifiesta todo.
+La primera es del apóstol Pablo en Efesios 5:13-14 (RVG), "`Pero todas las cosas
+que son reprobadas, son hechas manifiestas por la luz,
+porque lo que manifiesta todo, es la luz.
 Por lo cual dice: Despiértate, tú que duermes,`" etc.
 A todo hombre le es mandado despertar,
 porque todo hombre tiene alguna proporción de ese don en él, que si lo escucha,
@@ -345,7 +345,7 @@ que Él desea que todos sean salvos y lleguen al conocimiento de la verdad.
 Y aunque les fue dicho a los judíos que Dios era como un alfarero y ellos como arcilla,
 y que Él podía hacerlos vasijas de honra o deshonra según su voluntad (Jeremías 18:6),
 aún así esto fue dicho para este fin: Para invitarlos y animarlos a someterse a Él,
-y pudieran ser hechos por Él vasijas de honor, tal como se lee en el versículo 11.
+para que pudieran ser hechos por Él vasijas de honor, tal como se lee en el versículo 11.
 
 Ahora consideren si Dios es tan tierno con respecto a las
 almas como lo es con respecto a los cuerpos de los hombres,
