--- a/escritos-volumen-2/updated/05-capitulo-5.adoc
+++ b/escritos-volumen-2/updated/05-capitulo-5.adoc
@@ -310,7 +310,7 @@ Sin embargo,
 después de haber recibido el golpe y la herida del
 Espíritu Santo y poder de Dios (es decir,
 la herida que dirige a la muerte),
-buscará vida de nuevo (consiguiendo sanar su herida mortal) y la alimentará,
+buscará vida de nuevo (intentando sanar su herida mortal) y la alimentará
 por medio de los mismos conceptos que salían de la
 vida y poder que en medida lo habían matado.
 De esta manera el judío externo encuentra su vida en el conocimiento externo,
@@ -350,7 +350,7 @@ cuando el Señor habla de proveer para Sus hijos un nuevo pacto dice:
 Ahora le corresponde a cada uno considerar profundamente de qué naturaleza es su fe,
 y qué virtud hay en ella.
 Qué puede hacer esta en y a través del poder del Señor para él. Si en
-verdad va a recoger la verdadera y viva nutrición cada día. Si libera
+verdad recoge la verdadera y viva nutrición cada día. Si libera
 el alma y le da victoria sobre aquello que la fe fue designada vencer.
 Porque aquel que a través de la fe vence lo que es contrario a Dios, recibe la herencia,
 y aquel que pelea la buena batalla de la fe, vence.
