more chapter 5 corrections

--- a/escritos-volumen-2/updated/05-capitulo-5.adoc
+++ b/escritos-volumen-2/updated/05-capitulo-5.adoc
@@ -501,7 +501,7 @@ pero la cosa misma está escondida para él. ¡Sí,
 cuán estrecha es la puerta a través de la cual entra el nacimiento,
 y por la que nadie más puede entrar!
 El sabio y entendido, aprendiz y escrutador según la carne (incluso de las Escrituras,
-ya que ellos pueden poner sobre ellas significados y comprenderlas),
+ya que ellos pueden poner sobre ellas significados y así comprenderlas),
 son excluidos en todas las épocas.
 Pero hay un bebé nacido de la verdad desnuda (nacido
 de la sencillez pura) a quien Dios le permite entrar.
@@ -520,7 +520,7 @@ pero tenemos comunión en el juicio justo del Espíritu, sólo con los que son d
 De hecho,
 somos tiernos cuando hay al menos un comienzo de la obra de Dios en cualquier corazón;
 sí, donde apenas hay una convicción del entendimiento.
-Pero los que admiten nuestros principios en palabras o apariencia externa,
+Pero los que aceptan nuestros principios en palabras o apariencia externa,
 no son verdaderamente uno de nosotros,
 sino aquellos que son internamente cambiados por ellos en el corazón.
 
@@ -575,7 +575,7 @@ Y ahora, que cada corazón serio se examine: ¿Conoces el reino?
 ¿Está hecho de los dos un hombre nuevo?
 ¿Sientes lo que es contrario a Cristo sometido en ti mediante Su poder?
 ¿Sientes Su naturaleza santa, Su vida santa y Su Espíritu Santo reinando en ti?
-¿Experimentas la escritura que dicen:
+¿Experimentas la escritura que dice:
 "`Mas si por el Espíritu hacéis morir las obras de la carne, viviréis`"?
 
 ¡Ah, cuánto hablan los hombres de Cristo y del poder de Dios, y sin embargo,
@@ -635,7 +635,7 @@ Juan respondió al asunto diciéndoles cómo podrían discernir y conocer al ver
 Dijo: No soy yo, que bautizo sólo con agua,
 sino el que "`bautice con el Espíritu Santo y fuego,
 y en cuya mano esté el aventador,`" etc.
-(Lucas 3.15-17) El que conoce Al que bautiza interna y espiritualmente,
+(Lucas 3:15-17) El que conoce Al que bautiza interna y espiritualmente,
 Al que tiene el aventador y purga y avienta la era,
 recogiendo el trigo y quemando la paja, ¿no conoce interna,
 verdadera y espiritualmente a Cristo?
