--- a/escritos-volumen-2/updated/06-capitulo-6.adoc
+++ b/escritos-volumen-2/updated/06-capitulo-6.adoc
@@ -157,7 +157,7 @@ Dios nos ha llamado y ha requerido de nosotros claramente.
 
 En segundo lugar, la necesidad de publicar la otra no es tan grande como lo era antes.
 El relato histórico con respecto a Cristo es generalmente creído y recibido,
-por todas las formas que profesan el cristianismo.
+por todas las personas que profesan el cristianismo.
 Su muerte, Sus milagros, Su resurrección, Su ascensión, Su intercesión, etc.,
 es generalmente creído por todas las personas.
 Pero se pierden el misterio, no conocen la vida escondida,
@@ -168,7 +168,7 @@ En tercer lugar, el conocimiento de estas (doctrina, historia, etc.),
 sin el conocimiento del misterio, no es suficiente para llevar a dichas personas a Dios.
 Porque muchos se conforman con lo que han reunido
 y comprendido del relato con respecto a la cosa,
-en lugar de la cosas misma,
+en lugar de la cosa misma,
 y por eso nunca llegan al sentido de su verdadera necesidad o de cómo buscarla correctamente.
 Entonces, muchas son edificadoras y muchas se levantan muy alto en religión,
 en una forma de conocimiento y práctica,
