More Chap 6 fixes

--- a/escritos-volumen-2/updated/06-capitulo-6.adoc
+++ b/escritos-volumen-2/updated/06-capitulo-6.adoc
@@ -405,7 +405,7 @@ principio natural y de acuerdo al pacto de obras,
 y no de la gracia y don gratuitos del Espíritu de Dios.
 
 Ahora bien, con respecto a esto puedo hablar con cierta fidelidad,
-como alguien que ha tenido una larga experiencia en el principio,
+como alguien que ha tenido una larga experiencia con este principio,
 y que ha experimentado la gracia y tierna misericordia del Señor desde la infancia.
 En realidad, ha sucedido así conmigo:
 Desde mi niñez he sentido que todo lo que ha sido hecho en mí, o por medio de mí,
@@ -580,7 +580,7 @@ verde y viva de la verdadera vid, del árbol de olivo santo.
 Muchas cosas más podrían ser mencionadas,
 ya que son conocidas y sentidas por experiencia entre aquellos que son verdaderos cristianos,
 pero estas las mencioné para dar una probadita.
-El que conoce y siente estas cosas puede también conocer y sentir el resto,
+El que conoce y siente estas cosas puede también conocer y sentir el resto;
 el que no conoce o siente estas, no conocerá o sentirá el resto,
 incluso si fueran mencionadas muchas más. La manera de sentir estas cosas
 y de llegar a ser un verdadero cristiano (y crecer en la vida cristiana),
@@ -606,4 +606,4 @@ qué seamos hechos capaces de soportar la prueba de Su juicio escrutador,
 de su ojo puro e imparcial,
 y no seamos hallados como aquellos que aún son hacedores de iniquidad,
 que no han sido creados nuevamente en Cristo Jesús para buenas obras y, por tanto,
-que no son no verdaderamente de Él.
+que no son verdaderamente de Él.
