--- a/escritos-volumen-2/updated/07-capitulo-7.adoc
+++ b/escritos-volumen-2/updated/07-capitulo-7.adoc
@@ -193,7 +193,7 @@ el espíritu quebrantado (desgarren sus corazones y no sus vestiduras,
 y vuélvanse al Señor su Dios).
 Al corazón contrito y humillado no despreciarás tú, oh Dios.`"
 La ofrenda de alabanza a Dios desde un corazón sincero
-y el correcto ordenamiento de la vida,
+y el recto ordenamiento de la vida,
 son los sacrificios que complacen a Dios.
 Porque los sacrificios no eran lo que Dios requería principalmente del Israel externo,
 sino: "`Obedezcan Mi voz.`"
