--- a/escritos-volumen-2/updated/08-capitulo-8.adoc
+++ b/escritos-volumen-2/updated/08-capitulo-8.adoc
@@ -1142,7 +1142,7 @@ aún existía una discusión e insatisfacción en las mentes de muchos con respe
 a Él). Pero para el que siente la cosa misma en la verdadera Semilla,
 donde son recibidas la demostración y la certeza de la seguridad del Espíritu,
 este ha viajado más allá de toda discusión,
-y ha sido introducido (en alguna medida) en la naturaleza de la cosas,
+y ha sido introducido (en alguna medida) en la naturaleza de la cosa,
 más allá de la satisfacción que los milagros pueden ofrecer.
 Él está fuera del estado y mente que piden una señal
 o que buscan confirmación por medio de una señal.
