--- a/escritos-volumen-2/updated/09-capitulo-9.adoc
+++ b/escritos-volumen-2/updated/09-capitulo-9.adoc
@@ -51,7 +51,7 @@ en esa medida podemos orar.
 Pero cuando la vida se detiene, nosotros nos detenemos,
 y no nos atrevemos a ofrecerle a Dios ningún sacrificio por nuestra propia cuenta,
 sino únicamente el que el Padre prepara y nos da.
-Igualmente al comer y beber, y en cualquiera cosa que hagamos,
+Igualmente al comer y beber, y en cualquier cosa que hagamos,
 nuestros corazones se retiran al Señor y esperamos hasta
 sentir que todo es santificado por Su presencia y bendición;
 aquí todo es en verdad dulce para nosotros.
@@ -96,7 +96,7 @@ entendimientos y conceptos estériles sobre las Escrituras!
 === La Triple Aparición de Cristo
 
 [.offset]
-A saber: Bajo la Ley, en el Cuerpo de Carne, en Su Espíritu y Poder
+A saber: Bajo la Ley, en el Cuerpo de Carne, y en Su Espíritu y Poder
 
 [.numbered-group]
 ====
