IP chap 9 typos

--- a/escritos-volumen-2/updated/09-capitulo-9.adoc
+++ b/escritos-volumen-2/updated/09-capitulo-9.adoc
@@ -562,7 +562,7 @@ porque quiere destruir a la mayor parte de los hombres, no tiene fundamento,
 pues las Escrituras no declaran esto, sino que testifican abundantemente lo contrario.
 Porque, ¿cuánto tiempo luchó Dios con el mundo antiguo (en los días de Noé), es decir,
 para salvar a aquellos que después destruyó? Y,
-¿cuánto tiempo lucho con el pueblo de los judíos (sí,
+¿cuánto tiempo luchó con el pueblo de los judíos (sí,
 y con otras naciones también)? "`Vivo yo,
 dice el Señor,`" (y Él habla desde Su corazón) "`que no quiero la muerte del impío,
 sino que se torne el impío de su camino, y que viva.
