more chapter 11 fixes

--- a/escritos-volumen-2/updated/11-capitulo-11.adoc
+++ b/escritos-volumen-2/updated/11-capitulo-11.adoc
@@ -425,7 +425,7 @@ Lean esta escritura y que el Señor la aplique a sus almas:
 ni es la circuncisión la que se hace exteriormente en la carne;
 sino que es judío el que lo es en lo interior, y la circuncisión es la del corazón,
 en espíritu, no en letra; la alabanza del cual no viene de los hombres,
-sino de Dios`" (Romanos 2:28-29). ¿Acaso no dice el Espíritu de Dios en nuestro días (sí,
+sino de Dios`" (Romanos 2:28-29). ¿Acaso no dice el Espíritu de Dios en nuestros días (sí,
 en verdad el Espíritu de nuestro Dios lo dice así y muchos han oído Su voz hablando):
 '`No es cristiano el que lo es externamente,
 ni el bautismo del evangelio el que se hace externamente en la carne,
@@ -451,7 +451,7 @@ por medio del Espíritu y Su fuego,
 o por el "`Espíritu de juicio y fuego`" (Isaías 4:4). Los que fueron bautizados por Juan,
 después tuvieron que expectar y esperar este bautismo,
 para que el Señor '`limpiara con Su aventador su era,
-su paja fuera quemada y el trigo recogido en el granero.`' (Mateo 3.12)
+su paja fuera quemada y el trigo recogido en el granero.`' (Mateo 3:12)
 
 Ahora bien, nosotros, en efecto,
 concedemos que la circuncisión de Moisés era una ordenanza de Dios,
