--- a/escritos-volumen-2/updated/12-capitulo-12.adoc
+++ b/escritos-volumen-2/updated/12-capitulo-12.adoc
@@ -61,7 +61,7 @@ sino por la visita de la tierna misericordia de Dios y operación de Su
 Santo Espíritu sobre nosotros (en y a través de la regeneración,
 renovación y limpieza de lo que contamina y mancha nuestras almas),
 fuimos salvados de la ira venidera y de los caminos de transgresión en los que andábamos,
-antes de que nuestros Dios nos visitara.
+antes de que nuestro Dios nos visitara.
 
 Y ahora,
 el deseo sincero de nuestras almas es que esta tierna misericordia
