more chap 12 typos

--- a/escritos-volumen-2/updated/12-capitulo-12.adoc
+++ b/escritos-volumen-2/updated/12-capitulo-12.adoc
@@ -279,7 +279,7 @@ Toda imitación,
 conocimiento e interpretación de las Escrituras que esté fuera de la vida pura,
 debe ser dejado de lado,
 y el Espíritu del Señor debe ser esperado en la luz que es de Él.
-La mente debe volverse hacía aquí y aprender verdaderamente a permanecer.
+La mente debe volverse hacia aquí y aprender verdaderamente a permanecer.
 
 ¡Oh, profesantes, ustedes conocerían mucho más de Él,
 si lo conocieran a Su manera y lo adoraran en la ordenanza eterna,
