tweaks/fixes from testing asciidoc lexer

--- a/escritos-volumen-2/updated/02-capitulo-2.adoc
+++ b/escritos-volumen-2/updated/02-capitulo-2.adoc
@@ -6,7 +6,7 @@ y no solo eso,
 también lo dio "`para luz de los gentiles y salvación hasta lo último de la tierra.`"
 El Padre, quien lo envió a predicar el evangelio,
 lo ungió y lo llenó de Su Espíritu para que pudiera predicar el evangelio,
-según la escritura de Isaías 61:1 - 3.
+según la escritura de Isaías 61:1-3.
 
 [quote.scripture]
 ____
