--- a/escritos-volumen-2/updated/13-capitulo-13.adoc
+++ b/escritos-volumen-2/updated/13-capitulo-13.adoc
@@ -424,7 +424,7 @@ bajo su protección,
 bajo su gobierno (sujetándose a ella y siendo guiados por ella en todo).
 En esta gracia llegarán a conocer, en verdadera experiencia y con todo el peso de esta,
 lo que significa la escritura: "`Porque el pecado no se enseñoreará de vosotros;
-porque no estáis debajo de la ley, sino debajo de la gracia`" (Romanos 6:14).
+porque no estáis bajo la ley, sino bajo la gracia`" (Romanos 6:14).
 
 === Respuesta a la Pregunta Sobre la Santidad Real
 
